[package]
name = "rust-cors-anywhere"
version = "0.1.0"
authors = ["Etienne Batise <etienne.batise@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
structopt = "0.3.13"
failure = "0.1.7"
exitfailure = "0.5.1"
